# AntiRec

./: .env.development  .env.production  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_zh-CN.md  SECURITY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question-.md
.github/workflows/: release.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  test.rs
src/i18n/: en.json  index.js  zh-CN.json
src/router/: index.js
src/utils/: login.js  wave.js
src/views/: AsyncUpload.vue  AsyncView.vue  ConfigView.vue  HomeView.vue  ListView.vue  NotFound.vue  ProtectView.vue
uap/: uap.ar
