[package]
name = "anti-rec"
version = "1.0.0"
description = "A app that prevents users from being eavesdropped"
authors = ["LinJHS"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-create-dir", "path-all", "fs-exists", "fs-write-file", "fs-read-file", "fs-read-dir"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15.3"
dasp_sample = "0.11"
hound = "3.5.1"
directories = "5.0.1"
lazy_static = "1.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
